--- a/cloud/index.html
+++ b/cloud/index.html
@@ -28,8 +28,8 @@
 	   }
     </style>
 </head>
-<meta http-equiv="refresh" content="2; url=https://<!--SERVER IP-->"></meta>
+<meta http-equiv="refresh" content="2; url=http://cloud.thsd.kr:318"></meta>
 <body>
-        <h1>&#169; 2024 thsd&#46; All Rights Reserved&#46;</h1>
+        <h1>&#169; 2025 thsd&#46; All Rights Reserved&#46;</h1>
 </body>
 </html>
