--- a/cloud/index.html
+++ b/cloud/index.html
@@ -28,7 +28,7 @@
 	   }
     </style>
 </head>
-<meta http-equiv="refresh" content="2; url=http://cloud.thsd.kr:318"></meta>
+<meta http-equiv="refresh" content="2; url=http://cloud.thsd.kr"></meta>
 <body>
         <h1>&#169; 2025 thsd&#46; All Rights Reserved&#46;</h1>
 </body>
